<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical">
		<TextView
			android:text="@string/text_help_description"
			android:textSize="20dp"
			android:textStyle="bold"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" />
		<TextView
			android:text="@string/text_help_description_content"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" />
		<TextView
			android:text="@string/text_help_install"
			android:textSize="20dp"
			android:textStyle="bold"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" />
		<TextView
			android:text="@string/text_help_install_content_1"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" />
		<Button
			android:id="@+id/settingsButton"
			android:text="@string/text_settings"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<TextView
			android:text="@string/text_help_install_content_2"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" />
		<TextView
			android:text="@string/text_help_usage"
			android:textSize="20dp"
			android:textStyle="bold"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" />
		<TextView
			android:text="@string/text_help_usage_content"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" />
		<TextView
			android:text="@string/text_help_contact"
			android:textSize="20dp"
			android:textStyle="bold"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" />
		<TextView
			android:text="@string/text_help_contact_content"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" />
	</LinearLayout>
</ScrollView>